@@ -1,10 +1,13 @@
 dist_ietf_yang_DATA = \
+$(top_srcdir)/netconf/modules/ietf/ietf-alarms@2019-09-11.yang \
+$(top_srcdir)/netconf/modules/ietf/ietf-alarms-x733@2019-09-11.yang \
 $(top_srcdir)/netconf/modules/ietf/ietf-system@2014-08-06.yang \
 $(top_srcdir)/netconf/modules/ietf/iana-crypt-hash@2014-08-06.yang \
 $(top_srcdir)/netconf/modules/ietf/iana-if-type@2014-05-08.yang \
 $(top_srcdir)/netconf/modules/ietf/ietf-interfaces@2014-05-08.yang \
 $(top_srcdir)/netconf/modules/ietf/ietf-ip@2014-06-16.yang \
 $(top_srcdir)/netconf/modules/ietf/ietf-netconf-monitoring@2010-10-04.yang \
+$(top_srcdir)/netconf/modules/ietf/ietf-netconf-nmda@2019-01-07.yang \
 $(top_srcdir)/netconf/modules/ietf/ietf-netconf-with-defaults@2011-06-01.yang \
 $(top_srcdir)/netconf/modules/ietf/ietf-netconf-acm@2018-02-14.yang \
 $(top_srcdir)/netconf/modules/ietf/ietf-netconf-notifications@2012-02-06.yang \
@@ -30,17 +33,14 @@ $(top_srcdir)/netconf/modules/ietf/ietf-network-topology@2018-02-26.yang \
 $(top_srcdir)/netconf/modules/ietf/ietf-network-topology-state@2018-02-26.yang
 
 dist_ietf_draft_yang_DATA = \
-$(top_srcdir)/netconf/modules/ietf-draft/ietf-alarms-x733.yang \
-$(top_srcdir)/netconf/modules/ietf-draft/ietf-alarms.yang \
-$(top_srcdir)/netconf/modules/ietf-draft/ietf-netconf-nmda.yang \
 $(top_srcdir)/netconf/modules/ietf-draft/ietf-network-bridge.yang \
 $(top_srcdir)/netconf/modules/ietf-draft/ietf-network-bridge-flows.yang \
 $(top_srcdir)/netconf/modules/ietf-draft/ietf-network-bridge-scheduler.yang \
 $(top_srcdir)/netconf/modules/ietf-draft/ietf-network-bridge-scheduler-state.yang \
 $(top_srcdir)/netconf/modules/ietf-draft/ietf-traffic-generator.yang \
 $(top_srcdir)/netconf/modules/ietf-draft/ietf-traffic-analyzer.yang \
-$(top_srcdir)/netconf/modules/ietf-draft/ietf-loopback.yang \
-$(top_srcdir)/netconf/modules/ietf-draft/ietf-interfaces-ethernet-like@2017-07-03.yang
+$(top_srcdir)/netconf/modules/ietf-draft/ietf-if-extensions.yang \
+$(top_srcdir)/netconf/modules/ietf-draft/ietf-if-ethernet-like.yang
 
 dist_ietf_derived_yang_DATA = \
 $(top_srcdir)/netconf/modules/ietf-derived/nc-notifications.yang \
