@@ -17,7 +17,7 @@ module ietf-traffic-analyzer {
      WG List:  <mailto:bmwg@ietf.org>
 
      Editor:   Vladimir Vassilev
-               <mailto:vladimir@transpacket.com>";
+               <mailto:vladimir@lightside-instruments.com>";
   description
     "This module contains a collection of YANG definitions for
      description and management of network interconnect testers.
@@ -35,10 +35,11 @@ module ietf-traffic-analyzer {
      This version of this YANG module is part of RFC XXXX; see
      the RFC itself for full legal notices.";
 
-  revision 2019-03-09 {
+  revision 2019-10-08 {
     description
       "Initial revision.";
-    reference "RFC XXXX: Network Interconnect Tester";
+    reference
+      "RFC XXXX: Network Interconnect Tester";
   }
 
   feature egress-direction {
@@ -71,101 +72,175 @@ module ietf-traffic-analyzer {
 
   identity ethernet {
     base ta:filter;
+    description
+      "Ethernet packet fields filter.";
   }
 
   grouping statistics-data {
+    description
+      "Analyzer statistics.";
     leaf pkts {
       type yang:counter64;
+      description
+        "Total number of packets analyzed.";
     }
     leaf errors {
       type yang:counter64;
+      description
+        "Count of packets with errors.
+         Not counted in the pkts or captured.
+         For example packets with CRC error.";
     }
     container testframe-stats {
+      description
+        "Statistics for testframe packets containing
+         either sequence number, payload checksum,
+         timestamp or any combination of these features.";
       leaf testframe-pkts {
         type yang:counter64;
+        description
+          "Total count of detected testframe packets.";
       }
       leaf sequence-errors {
         type yang:counter64;
+        description
+          "Total count of testframe packets with
+           unexpected sequence number. After each sequence
+           error the expected next sequence number is
+           updated.";
       }
       leaf payload-errors {
         type yang:counter64;
+        description
+          "Total count of testframe packets with
+           payload errors.";
       }
       container latency {
+        description
+          "Latency statistics.";
         leaf samples {
           type uint64;
+          description
+            "Total count of packets used for estimating
+             the latency statistics. Ideally
+             samples=../testframe-stats.";
         }
         leaf min {
-          units "nanoseconds";
           type uint64;
+          units "nanoseconds";
+          description
+            "Minimum measured latency.";
         }
         leaf max {
-          units "nanoseconds";
           type uint64;
+          units "nanoseconds";
+          description
+            "Maximum measured latency.";
         }
         leaf average {
+          type uint64;
+          units "nanoseconds";
           description
             "The sum of all sampled latencies divided
              by the number of samples.";
-          units "nanoseconds";
-          type uint64;
         }
         leaf latest {
-          units "nanoseconds";
           type uint64;
+          units "nanoseconds";
+          description
+            "Latency of the latest sample.";
         }
       }
     }
   }
 
   grouping capture-data {
+    description
+      "Grouping with statistics and data
+       of one or more captured frame.";
     container capture {
       if-feature "capture";
+      description
+        "Statistics and data of
+         one or more captured frames.";
       list frame {
         key "sequence-number";
+        description
+          "Statistics and data of a captured frame.";
         leaf sequence-number {
           type uint64;
+          description
+            "Incremental counter of frames captured.";
         }
         leaf timestamp {
           type yang:date-and-time;
+          description
+            "Timestamp of the moment the frame was captured.";
         }
         leaf length {
           type uint32;
+          description
+            "Frame length. Ideally the data captured will be
+             of the same length but can be shorter
+             depending on implementation limitations.";
         }
         leaf preceding-interframe-gap {
           type uint32;
+          units "nanoseconds";
+          description
+            "Measured delay between the reception of the previous
+             frame was completed and the reception of the current
+             frame was started.";
         }
         leaf data {
           type string {
             pattern '([0-9A-F]{2})*';
           }
+          description
+            "Raw data of the captured frame.";
         }
       }
     }
   }
 
   grouping filter-data {
+    description
+      "Grouping with a filter container specifying the filtering
+       rules for processing only a specific subset of the
+       frames.";
     container filter {
-      presence
-        "When present ingress packets are
-         filtered before analyzed according
-         to the filter type";
       if-feature "filter";
+      presence "When present packets are
+                filtered before analyzed according
+                to the filter type";
+      description
+        "Contains the filtering rules for processing only
+         a specific subset of the frames.";
       leaf type {
-        mandatory true;
         type identityref {
           base ta:filter;
         }
+        mandatory true;
+        description
+          "Type of the applied filter. External modules can
+           define alternative filter type identities.";
       }
     }
   }
 
   augment "/if:interfaces/if:interface" {
+    description
+      "Traffic analyzer augmentations of ietf-interfaces.";
     container traffic-analyzer {
       if-feature "ingress-direction";
       presence "Enables the traffic analyzer for ingress traffic.";
+      description
+        "Traffic analyzer for ingress direction.";
       uses filter-data;
       container state {
         config false;
+        description
+          "State data.";
         uses statistics-data;
         uses capture-data;
       }
@@ -173,24 +248,33 @@ module ietf-traffic-analyzer {
     container traffic-analyzer-egress {
       if-feature "egress-direction";
       presence "Enables the traffic analyzer for egress traffic.";
+      description
+        "Traffic analyzer for egress direction.";
       uses filter-data;
       container state {
         config false;
+        description
+          "State data.";
         uses statistics-data;
         uses capture-data;
       }
     }
   }
+
   augment "/if:interfaces/if:interface/ta:traffic-analyzer/ta:filter" {
     when "ta:type = 'ta:ethernet'";
+    description
+      "Ethernet frame specific filter type.";
     leaf ether-type {
       type uint16;
       description
         "The Ethernet Type (or Length) value
          defined by IEEE 802.";
-      reference "IEEE 802-2014 Clause 9.2";
+      reference
+        "IEEE 802-2014 Clause 9.2";
     }
   }
+
   augment "/if:interfaces-state/if:interface/if:statistics" {
     if-feature "ingress-direction";
     description
@@ -213,6 +297,7 @@ module ietf-traffic-analyzer {
          but with payload errors.";
     }
   }
+
   augment "/if:interfaces-state/if:interface/if:statistics" {
     if-feature "egress-direction";
     description
